Fix wrapping

--- a/styles/find-and-replace.less
+++ b/styles/find-and-replace.less
@@ -120,17 +120,13 @@ atom-workspace.find-visible {
 .find-and-replace {
   @button-width: 120px;        // Find + Replace + Find All + Replace All buttons
   @option-button-width: 100px;  // option buttons
-  @item-width: 260px;          // wrap block width
+  @item-width: 300px;          // wrap block width
 
   .input-block-item {
     flex: 1 1 @item-width;
   }
   .input-block-item--flex {
     flex: 100 1 @item-width;
-  }
-
-  .input-block-item.option-block {
-    flex-basis: @option-button-width;
   }
 
   .btn-group-find,
